--- a/_posts/2018-07-01-welcome.md
+++ b/_posts/2018-07-01-welcome.md
@@ -1,6 +1,17 @@
 ---
+tags: test
+layout: article
 title: Welcome
-tags: TeXt
+mode: immersive
+header:
+  theme: dark
+article_header:
+  type: overlay
+  theme: dark
+  background_color: '#203028'
+  background_image:
+    gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
+    src: /docs/assets/images/cover3.jpg
 ---
 
 Hello.
